# kana

./: .gitignore  Cargo.toml  build.rs  wrapper.h
src/: core.rs  lib.rs  main.rs  main.ui  menu.ui  persistence.rs  port.rs  style.css  ui.rs
src/core/: document.rs  state.rs
src/persistence/: config.rs  samba.rs
src/persistence/samba/: wrapper.rs
src/ui/: design.ui  main.ui  settings.rs  sidebar.rs  style.css
src/ui/settings/: search.rs
